SERVER-14299 prevent mongos from requesting unnecessary batches for sort + limit queries

(cherry picked from commit 8b8a118fc965231293ad56c53a837ffacb17132f)

Conflicts:
	src/mongo/db/query/new_find.cpp