src/mongo/client/parallel.cpp
@@ -237,7 +237,6 @@ namespace mongo {
 
         BSONObj ret = _next;
         _next = BSONObj();
-        _advance();
         return ret;
     }
 
